# LearningOpenGLNote

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  myopenglwidget.cpp  myopenglwidget.h  res.qrc
qss/: style.qss
shaders/: shapes.frag  shapes.vert
